removed translucentTimeCard, added context menu for cards, stopped cards being moved / resized outside event, stopped page refreshing when deleting or creating timecards, started method to detect overlapping time cards for merge handling

--- a/styles/Components/Resizable.css
+++ b/styles/Components/Resizable.css
@@ -4,7 +4,7 @@
 
 .react-resizable-handle {
 	position: absolute;
-	width: 20px;
+	width: 10px;
 	height: 20px;
 	background-repeat: no-repeat;
 	background-origin: content-box;
@@ -80,15 +80,6 @@
 	display: flex;
 	height: 100%;
 	width: 100%;
-	padding-left: 20px;
-	padding-right: 20px;
-}
-
-.container {
-	position: relative;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background: #cecece;
-	border-radius: 5px;
+	padding-left: 10px;
+	padding-right: 10px;
 }
