--- a/styles/Components/TimelineCard.module.scss
+++ b/styles/Components/TimelineCard.module.scss
@@ -7,29 +7,12 @@
 	border-radius: 5px;
 }
 
-.newCard {
-	position: absolute;
-}
-
 .content {
-	height: 50px;
+	height: 45px;
 	margin-top: 5px;
 	margin-bottom: 5px;
-	padding-left: 20px;
-	padding-right: 20px;
-}
-
-.deleteButton {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	border-radius: 5px;
-	width: 40px;
-	height: 40px;
-
-	&:hover {
-		background: #c73030;
-	}
+	padding-left: 10px;
+	padding-right: 10px;
 }
 
 .binIcon {
@@ -51,7 +34,7 @@
 }
 
 .timeCue {
-	display: flex;
-	justify-content: center;
 	align-items: center;
+	text-overflow: ellipsis;
+	overflow: hidden;
 }
