--- a/styles/id.module.scss
+++ b/styles/id.module.scss
@@ -16,7 +16,11 @@
 .localUserResponses {
 	position: relative;
 	display: flex;
-	height: 60px;
+	height: 50px;
+}
+
+.userResponses {
+	position: relative;
 }
 
 .eventInfo {
@@ -111,5 +115,35 @@
 	&:hover {
 		background: rgb(77, 23, 23);
 		cursor: pointer;
+	}
+}
+
+.contextMenu {
+	position: fixed;
+	background: white;
+	border: #505050;
+	border-width: 1px;
+	border-style: solid;
+	border-radius: 5px;
+	width: 100px;
+	height: fit-content;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.contextMenuItem {
+	width: 100%;
+	height: 20px;
+	text-align: center;
+
+	&:first-child {
+		margin-top: 10px;
+	}
+
+	&:hover {
+		cursor: pointer;
+		background: #505050;
 	}
 }
